fix style causing horizontal overflow

--- a/src/styles/deeplib-buttons.scss
+++ b/src/styles/deeplib-buttons.scss
@@ -30,7 +30,6 @@
 }
 
 .deeplib-button.button-styling .button-label {
-  width: 100%;
   background-color: transparent !important;
   color: var(--deeplib-text-color);
   font-size: min(3.6dvh, 1.8dvw);
